--- a/sass/navigation.scss
+++ b/sass/navigation.scss
@@ -1,6 +1,7 @@
-﻿#navigation {
+#navigation {
 	background: url('../images/navi.png') no-repeat 0 0; 	
 	height:243px; 
+    width:822px;
 	margin:0 0 0 20px;
 	
 	ul { 
