--- a/stylesheets/jquery.fancybox-1.3.4.css
+++ b/stylesheets/jquery.fancybox-1.3.4.css
@@ -75,7 +75,7 @@
   position: relative;
   width: 100%;
   height: 100%;
-  background: #fff;
+  /*background: #fff;*/
 }
 
 /* line 76, ../sass/jquery.fancybox-1.3.4.scss */
@@ -87,18 +87,26 @@
   position: relative;
   overflow: hidden;
   z-index: 1102;
-  border: 0px solid white;
+  border: 8px solid #ec008c;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  border-radius: 20px;
+  background: #fff;
 }
-/* line 86, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 90, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-content ul {
   color: #252525;
 }
-/* line 88, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 92, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-content h3 span {
   font: bold 30px Tahoma, Arial;
 }
+/* line 95, ../sass/jquery.fancybox-1.3.4.scss */
+#fancybox-content #d1, #fancybox-content #d2, #fancybox-content #d3, #fancybox-content #d4, #fancybox-content #d5, #fancybox-content #d6 {
+  padding: 25px;
+}
 
-/* line 93, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 99, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-hide-sel-frame {
   position: absolute;
   top: 0;
@@ -109,11 +117,11 @@
   z-index: 1101;
 }
 
-/* line 103, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 109, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-close {
   position: absolute;
-  top: -12px;
-  right: -12px;
+  top: 13px;
+  right: 13px;
   width: 26px;
   height: 26px;
   background: transparent url("../images/close.png") 0 0;
@@ -122,7 +130,7 @@
   display: none;
 }
 
-/* line 115, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 121, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-error {
   color: #444;
   font: normal 12px/20px Arial;
@@ -130,7 +138,7 @@
   margin: 0;
 }
 
-/* line 122, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 128, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-img {
   width: 100%;
   height: 100%;
@@ -142,7 +150,7 @@
   vertical-align: top;
 }
 
-/* line 133, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 139, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-frame {
   width: 100%;
   height: 100%;
@@ -150,7 +158,7 @@
   display: block;
 }
 
-/* line 140, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 146, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-left, #fancybox-right {
   position: absolute;
   bottom: 0px;
@@ -163,17 +171,17 @@
   display: none;
 }
 
-/* line 152, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 158, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-left {
   left: 0px;
 }
 
-/* line 156, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 162, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-right {
   right: 0px;
 }
 
-/* line 160, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 166, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-left-ico, #fancybox-right-ico {
   position: absolute;
   top: 50%;
@@ -186,36 +194,36 @@
   display: block;
 }
 
-/* line 172, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 178, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-left-ico {
   background-image: url("../images/fancybox.png");
   background-position: -40px -30px;
 }
 
-/* line 177, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 183, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-right-ico {
   background-image: url("../images/fancybox.png");
   background-position: -40px -60px;
 }
 
-/* line 182, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 188, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-left:hover, #fancybox-right:hover {
   visibility: visible;
   /* IE6 */
 }
 
-/* line 186, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 192, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-left:hover span {
   left: 20px;
 }
 
-/* line 190, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 196, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-right:hover span {
   left: auto;
   right: 20px;
 }
 
-/* line 195, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 201, ../sass/jquery.fancybox-1.3.4.scss */
 .fancybox-bg {
   position: absolute;
   padding: 0;
@@ -224,87 +232,87 @@
   width: 22px;
   height: 22px;
   z-index: 1001;
-  background-color: #fff;
+  /*background-color:#fff;*/
 }
 
-/* line 206, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 212, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-bg-n {
   top: -22px;
   left: 0;
   width: 100%;
   /*background-image: url('../images/fancybox-x.png');*/
-  border-top: 8px solid #ec008c;
+  /*border-top:8px solid #ec008c;    */
 }
 
-/* line 214, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 220, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-bg-ne {
   top: -22px;
   right: -22px;
-  background: url("../images/bg-ne.png") no-repeat 100% 0%;
+  /*background: url('../images/bg-ne.png') no-repeat 100% 0%;*/
   /*background-position: -40px -162px;    */
 }
 
-/* line 221, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 227, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-bg-e {
   top: 0;
   right: -22px;
   height: 100%;
   /*background-image: url('../images/fancybox-y.png');*/
   background-position: -20px 0px;
-  border-right: 8px solid #ec008c;
+  /*border-right:8px solid #ec008c;    */
 }
 
-/* line 230, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 236, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-bg-se {
   bottom: -22px;
   right: -22px;
-  background: url("../images/bg-se.png") no-repeat 100% 100%;
+  /*background: url('../images/bg-se.png') no-repeat 100% 100%;*/
   /*background-position: -40px -182px;     */
 }
 
-/* line 237, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 243, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-bg-s {
   bottom: -22px;
   left: 0;
   width: 100%;
   /*	background-image: url('../images/fancybox-x.png');*/
   background-position: 0px -20px;
-  border-bottom: 8px solid #ec008c;
+  /*border-bottom:8px solid #ec008c;    */
 }
 
-/* line 246, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 252, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-bg-sw {
   bottom: -22px;
   left: -22px;
-  background: url("../images/bg-sw.png") no-repeat 0% 100%;
+  /*background: url('../images/bg-sw.png') no-repeat 0% 100%;*/
   /*background-position: -40px -142px;*/
 }
 
-/* line 253, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 259, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-bg-w {
   top: 0;
   left: -22px;
   height: 100%;
   /*background-image: url('../images/fancybox-y.png');*/
-  border-left: 8px solid #ec008c;
+  /*border-left:8px solid #ec008c;    */
 }
 
-/* line 261, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 267, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-bg-nw {
   top: -22px;
   left: -22px;
-  background: url("../images/bg-nw.png") no-repeat 0% 0%;
+  /*background: url('../images/bg-nw.png') no-repeat 0% 0%;*/
   /*background-position: -40px -122px;*/
 }
 
-/* line 268, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 274, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-title {
   font-family: Helvetica;
   font-size: 12px;
   z-index: 1102;
 }
 
-/* line 274, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 280, ../sass/jquery.fancybox-1.3.4.scss */
 .fancybox-title-inside {
   padding-bottom: 10px;
   text-align: center;
@@ -313,13 +321,13 @@
   position: relative;
 }
 
-/* line 282, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 288, ../sass/jquery.fancybox-1.3.4.scss */
 .fancybox-title-outside {
   padding-top: 10px;
   color: #fff;
 }
 
-/* line 287, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 293, ../sass/jquery.fancybox-1.3.4.scss */
 .fancybox-title-over {
   position: absolute;
   bottom: 0;
@@ -328,14 +336,14 @@
   text-align: left;
 }
 
-/* line 295, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 301, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-title-over {
   padding: 10px;
   background-image: url("../images/fancy_title_over.png");
   display: block;
 }
 
-/* line 301, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 307, ../sass/jquery.fancybox-1.3.4.scss */
 .fancybox-title-float {
   position: absolute;
   left: 0;
@@ -343,26 +351,26 @@
   height: 32px;
 }
 
-/* line 308, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 314, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-title-float-wrap {
   border: none;
   border-collapse: collapse;
   width: auto;
 }
 
-/* line 314, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 320, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-title-float-wrap td {
   border: none;
   white-space: nowrap;
 }
 
-/* line 319, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 325, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-title-float-left {
   padding: 0 0 0 15px;
   background: url("../images/fancybox.png") -40px -90px no-repeat;
 }
 
-/* line 324, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 330, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-title-float-main {
   color: #FFF;
   line-height: 29px;
@@ -371,116 +379,116 @@
   background: url("../images/fancybox-x.png") 0px -40px;
 }
 
-/* line 332, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 338, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-title-float-right {
   padding: 0 0 0 15px;
   background: url("../images/fancybox.png") -55px -90px no-repeat;
 }
 
 /* IE6 */
-/* line 339, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 345, ../sass/jquery.fancybox-1.3.4.scss */
 .fancybox-ie6 #fancybox-close {
   background: transparent;
   filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='fancybox/fancy_close.png', sizingMethod='scale');
 }
 
-/* line 341, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 347, ../sass/jquery.fancybox-1.3.4.scss */
 .fancybox-ie6 #fancybox-left-ico {
   background: transparent;
   filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='fancybox/fancy_nav_left.png', sizingMethod='scale');
 }
 
-/* line 342, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 348, ../sass/jquery.fancybox-1.3.4.scss */
 .fancybox-ie6 #fancybox-right-ico {
   background: transparent;
   filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='fancybox/fancy_nav_right.png', sizingMethod='scale');
 }
 
-/* line 344, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 350, ../sass/jquery.fancybox-1.3.4.scss */
 .fancybox-ie6 #fancybox-title-over {
   background: transparent;
   filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='fancybox/fancy_title_over.png', sizingMethod='scale');
   zoom: 1;
 }
 
-/* line 345, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 351, ../sass/jquery.fancybox-1.3.4.scss */
 .fancybox-ie6 #fancybox-title-float-left {
   background: transparent;
   filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='fancybox/fancy_title_left.png', sizingMethod='scale');
 }
 
-/* line 346, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 352, ../sass/jquery.fancybox-1.3.4.scss */
 .fancybox-ie6 #fancybox-title-float-main {
   background: transparent;
   filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='fancybox/fancy_title_main.png', sizingMethod='scale');
 }
 
-/* line 347, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 353, ../sass/jquery.fancybox-1.3.4.scss */
 .fancybox-ie6 #fancybox-title-float-right {
   background: transparent;
   filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='fancybox/fancy_title_right.png', sizingMethod='scale');
 }
 
-/* line 349, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 355, ../sass/jquery.fancybox-1.3.4.scss */
 .fancybox-ie6 #fancybox-bg-w, .fancybox-ie6 #fancybox-bg-e, .fancybox-ie6 #fancybox-left, .fancybox-ie6 #fancybox-right, #fancybox-hide-sel-frame {
   height: expression(this.parentNode.clientHeight + "px");
 }
 
-/* line 353, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 359, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-loading.fancybox-ie6 {
   position: absolute;
   margin-top: 0;
   top: expression((-20 + (document.documentElement.clientHeight ? document.documentElement.clientHeight/2 : document.body.clientHeight/2 ) + ( ignoreMe = document.documentElement.scrollTop ? document.documentElement.scrollTop : document.body.scrollTop )) + 'px');
 }
 
-/* line 358, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 364, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-loading.fancybox-ie6 div {
   background: transparent;
   filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='fancybox/fancy_loading.png', sizingMethod='scale');
 }
 
 /* IE6, IE7, IE8 */
-/* line 362, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 368, ../sass/jquery.fancybox-1.3.4.scss */
 .fancybox-ie .fancybox-bg {
   background: transparent !important;
 }
 
-/* line 364, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 370, ../sass/jquery.fancybox-1.3.4.scss */
 .fancybox-ie #fancybox-bg-n {
   filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='fancybox/fancy_shadow_n.png', sizingMethod='scale');
 }
 
-/* line 365, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 371, ../sass/jquery.fancybox-1.3.4.scss */
 .fancybox-ie #fancybox-bg-ne {
   filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='fancybox/fancy_shadow_ne.png', sizingMethod='scale');
 }
 
-/* line 366, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 372, ../sass/jquery.fancybox-1.3.4.scss */
 .fancybox-ie #fancybox-bg-e {
   filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='fancybox/fancy_shadow_e.png', sizingMethod='scale');
 }
 
-/* line 367, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 373, ../sass/jquery.fancybox-1.3.4.scss */
 .fancybox-ie #fancybox-bg-se {
   filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='fancybox/fancy_shadow_se.png', sizingMethod='scale');
 }
 
-/* line 368, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 374, ../sass/jquery.fancybox-1.3.4.scss */
 .fancybox-ie #fancybox-bg-s {
   filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='fancybox/fancy_shadow_s.png', sizingMethod='scale');
 }
 
-/* line 369, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 375, ../sass/jquery.fancybox-1.3.4.scss */
 .fancybox-ie #fancybox-bg-sw {
   filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='fancybox/fancy_shadow_sw.png', sizingMethod='scale');
 }
 
-/* line 370, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 376, ../sass/jquery.fancybox-1.3.4.scss */
 .fancybox-ie #fancybox-bg-w {
   filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='fancybox/fancy_shadow_w.png', sizingMethod='scale');
 }
 
-/* line 371, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 377, ../sass/jquery.fancybox-1.3.4.scss */
 .fancybox-ie #fancybox-bg-nw {
   filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='fancybox/fancy_shadow_nw.png', sizingMethod='scale');
 }
