--- a/stylesheets/navigation.css
+++ b/stylesheets/navigation.css
@@ -2,37 +2,38 @@
 #navigation {
   background: url("../images/navi.png") no-repeat 0 0;
   height: 243px;
+  width: 822px;
   margin: 0 0 0 20px;
 }
-/* line 6, ../sass/navigation.scss */
+/* line 7, ../sass/navigation.scss */
 #navigation ul {
   float: none;
   position: relative;
   height: 243px;
 }
-/* line 11, ../sass/navigation.scss */
+/* line 12, ../sass/navigation.scss */
 #navigation ul li a {
   display: block;
   position: absolute;
   text-indent: -9999px;
   background-size: 100%!important;
-  background-position: 0 100%!IMPORTANT;
+  background-position: 0 100% !important;
   background-repeat: no-repeat;
 }
-/* line 21, ../sass/navigation.scss */
+/* line 22, ../sass/navigation.scss */
 #navigation ul li a:hover,
 #navigation ul li a.active {
-  background-position: 0 0!important;
+  background-position: 0 0 !important;
 }
-/* line 23, ../sass/navigation.scss */
+/* line 24, ../sass/navigation.scss */
 #navigation ul li a:hover {
   z-index: 500;
 }
-/* line 24, ../sass/navigation.scss */
+/* line 25, ../sass/navigation.scss */
 #navigation ul li a.active {
   z-index: 450;
 }
-/* line 26, ../sass/navigation.scss */
+/* line 27, ../sass/navigation.scss */
 #navigation ul li.menu-link-2596 a {
   background: url("../images/m1.png");
   width: 163px;
@@ -40,7 +41,7 @@
   top: 25px;
   left: -16px;
 }
-/* line 33, ../sass/navigation.scss */
+/* line 34, ../sass/navigation.scss */
 #navigation ul li.menu-link-2601 a {
   background: url("../images/m2.png");
   width: 187px;
@@ -48,7 +49,7 @@
   top: 56px;
   left: 110px;
 }
-/* line 40, ../sass/navigation.scss */
+/* line 41, ../sass/navigation.scss */
 #navigation ul li.menu-link-2606 a {
   background: url("../images/m3.png");
   width: 178px;
@@ -56,7 +57,7 @@
   top: 40px;
   left: 253px;
 }
-/* line 47, ../sass/navigation.scss */
+/* line 48, ../sass/navigation.scss */
 #navigation ul li.menu-link-2611 a {
   background: url("../images/m4.png");
   width: 292px;
@@ -64,7 +65,7 @@
   top: -13px;
   left: 383px;
 }
-/* line 54, ../sass/navigation.scss */
+/* line 55, ../sass/navigation.scss */
 #navigation ul li.menu-link-2616 a {
   background: url("../images/m5.png");
   width: 173px;
@@ -72,7 +73,7 @@
   top: 7px;
   left: 565px;
 }
-/* line 61, ../sass/navigation.scss */
+/* line 62, ../sass/navigation.scss */
 #navigation ul li.menu-link-2621 a {
   background: url("../images/m6.png");
   width: 162px;
