--- a/stylesheets/responsive.css
+++ b/stylesheets/responsive.css
@@ -66,29 +66,35 @@
 }
 @media (min-width: 640px) and (max-width: 1024px) {
   /* line 19, ../sass/responsive.scss */
+  html, body {
+    background-size: auto auto !important;
+    -webkit-transform: translate3d(0, 0, 0);
+  }
+
+  /* line 24, ../sass/responsive.scss */
   .page-width {
     padding: 0 30px !important;
     width: 864px!important;
   }
 }
 @media only screen and (orientation: portrait) {
-  /* line 25, ../sass/responsive.scss */
+  /* line 30, ../sass/responsive.scss */
   #page {
     width: 924px;
   }
 
-  /* line 26, ../sass/responsive.scss */
+  /* line 31, ../sass/responsive.scss */
   #copyright {
     width: auto!important;
   }
 }
 @media only screen and (orientation: landscape) and (max-width: 1024px) {
-  /* line 31, ../sass/responsive.scss */
+  /* line 36, ../sass/responsive.scss */
   #page {
     width: 1024px;
   }
 
-  /* line 32, ../sass/responsive.scss */
+  /* line 37, ../sass/responsive.scss */
   #copyright {
     width: 100%!important;
   }
@@ -589,44 +595,44 @@
     filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='fancybox/fancy_shadow_nw.png', sizingMethod='scale');
   }
 
-  /* line 38, ../sass/responsive.scss */
+  /* line 43, ../sass/responsive.scss */
   html, body {
     background: #411d63!important;
     font-size: 100%!important;
   }
-  /* line 42, ../sass/responsive.scss */
+  /* line 47, ../sass/responsive.scss */
   html h2, body h2 {
     font: bold 30px Tahoma, Arial;
   }
-  /* line 43, ../sass/responsive.scss */
+  /* line 48, ../sass/responsive.scss */
   html h3, body h3 {
     font: 28px Tahoma, Arial;
   }
-  /* line 45, ../sass/responsive.scss */
+  /* line 50, ../sass/responsive.scss */
   html #page, body #page {
     background: none!important;
     width: auto!important;
   }
-  /* line 49, ../sass/responsive.scss */
+  /* line 54, ../sass/responsive.scss */
   html #page .page-width, body #page .page-width {
     padding: 0!important;
     width: auto!important;
   }
-  /* line 53, ../sass/responsive.scss */
+  /* line 58, ../sass/responsive.scss */
   html #page .lining, body #page .lining {
     padding: 0;
   }
-  /* line 54, ../sass/responsive.scss */
+  /* line 59, ../sass/responsive.scss */
   html #page #header-inner, body #page #header-inner {
     padding: 30px 30px 0;
   }
-  /* line 55, ../sass/responsive.scss */
+  /* line 60, ../sass/responsive.scss */
   html #page #site-name, body #page #site-name {
     background: none;
     height: auto;
     width: auto;
   }
-  /* line 60, ../sass/responsive.scss */
+  /* line 65, ../sass/responsive.scss */
   html #page #site-name a, body #page #site-name a {
     text-indent: 0;
     color: #ff9b20!important;
@@ -634,26 +640,26 @@
     height: auto!important;
     width: auto!important;
   }
-  /* line 68, ../sass/responsive.scss */
+  /* line 73, ../sass/responsive.scss */
   html #page .region-header .page-element, body #page .region-header .page-element {
     width: auto;
   }
-  /* line 69, ../sass/responsive.scss */
+  /* line 74, ../sass/responsive.scss */
   html #page #site-slogan, body #page #site-slogan {
     font: 70% Tahoma, Arial;
   }
-  /* line 70, ../sass/responsive.scss */
+  /* line 75, ../sass/responsive.scss */
   html #page #navigation, body #page #navigation {
     margin: 0;
     height: auto;
     width: auto;
     background: none;
   }
-  /* line 76, ../sass/responsive.scss */
+  /* line 81, ../sass/responsive.scss */
   html #page #navigation .block, body #page #navigation .block {
     margin: 0;
   }
-  /* line 78, ../sass/responsive.scss */
+  /* line 83, ../sass/responsive.scss */
   html #page #navigation #dropdown_button, body #page #navigation #dropdown_button {
     background: url("../images/m.png") no-repeat 0% 0%;
     width: 153px;
@@ -665,28 +671,28 @@
     margin-top: -20px;
     margin-right: 22px;
   }
-  /* line 89, ../sass/responsive.scss */
+  /* line 94, ../sass/responsive.scss */
   html #page #navigation .off_menu, body #page #navigation .off_menu {
     background: url("../images/m_off.png") no-repeat 0% 0% !important;
   }
-  /* line 90, ../sass/responsive.scss */
+  /* line 95, ../sass/responsive.scss */
   html #page #navigation #block-block-41, body #page #navigation #block-block-41 {
     background: url("../images/960head.png") repeat-x 0% 0%;
     display: block;
     position: relative;
     z-index: 200;
   }
-  /* line 96, ../sass/responsive.scss */
+  /* line 101, ../sass/responsive.scss */
   html #page #navigation ul, body #page #navigation ul {
     height: auto;
     display: none;
     position: absolute;
     top: 36px;
     right: 0;
-    z-index: 500;
+    z-index: 800;
     width: 100%;
   }
-  /* line 105, ../sass/responsive.scss */
+  /* line 110, ../sass/responsive.scss */
   html #page #navigation ul .menu-link-2926 a, body #page #navigation ul .menu-link-2926 a {
     color: #fff!important;
     background: url("../images/m_ico.png") no-repeat;
@@ -695,7 +701,7 @@
     padding-left: 75px;
     text-transform: uppercase;
   }
-  /* line 113, ../sass/responsive.scss */
+  /* line 118, ../sass/responsive.scss */
   html #page #navigation ul li, body #page #navigation ul li {
     float: none;
     margin: 0 30px;
@@ -703,11 +709,11 @@
     background: #ff9b21 url("../images/m_li.png") repeat-x 0% 0%;
     border: 1px solid white;
   }
-  /* line 120, ../sass/responsive.scss */
+  /* line 125, ../sass/responsive.scss */
   html #page #navigation ul li .menu-link-2926 a, body #page #navigation ul li .menu-link-2926 a {
     color: #fff!important;
   }
-  /* line 123, ../sass/responsive.scss */
+  /* line 128, ../sass/responsive.scss */
   html #page #navigation ul li a, body #page #navigation ul li a {
     text-indent: 0;
     background: none;
@@ -719,29 +725,41 @@
     line-height: 90px;
     /*font:30px/90px Arial; */
   }
-  /* line 137, ../sass/responsive.scss */
+  /* line 142, ../sass/responsive.scss */
   html #page #content, body #page #content {
+    padding: 0;
+  }
+  /* line 145, ../sass/responsive.scss */
+  html #page #content h1, body #page #content h1 {
     padding: 0 30px;
   }
-  /* line 138, ../sass/responsive.scss */
+  /* line 146, ../sass/responsive.scss */
+  html #page #content h1.titl, body #page #content h1.titl {
+    display: none;
+  }
+  /* line 147, ../sass/responsive.scss */
+  html #page #content h1.titl2, body #page #content h1.titl2 {
+    display: block!important;
+  }
+  /* line 149, ../sass/responsive.scss */
   html #page .geton, body #page .geton {
     display: block!important;
   }
-  /* line 141, ../sass/responsive.scss */
+  /* line 152, ../sass/responsive.scss */
   html #page .geton a, body #page .geton a {
     width: 155px;
     height: 148px;
     background-size: 100%;
   }
-  /* line 147, ../sass/responsive.scss */
+  /* line 158, ../sass/responsive.scss */
   html #page .get1, body #page .get1 {
     display: none;
   }
-  /* line 148, ../sass/responsive.scss */
+  /* line 159, ../sass/responsive.scss */
   html #page #video, body #page #video {
     display: none!important;
   }
-  /* line 149, ../sass/responsive.scss */
+  /* line 160, ../sass/responsive.scss */
   html #page #video2, body #page #video2 {
     display: block!important;
     background: url("../images/video_mobile.png") no-repeat 0 0;
@@ -749,33 +767,33 @@
     height: 318px;
     padding: 31px 0 0 104px;
   }
-  /* line 157, ../sass/responsive.scss */
+  /* line 168, ../sass/responsive.scss */
   html #copyright, body #copyright {
     padding: 0;
     background: none;
     width: 100%!important;
   }
-  /* line 162, ../sass/responsive.scss */
+  /* line 173, ../sass/responsive.scss */
   html #copyright .page-width, body #copyright .page-width {
     padding: 0 !important;
     width: 100%!important;
   }
-  /* line 167, ../sass/responsive.scss */
+  /* line 178, ../sass/responsive.scss */
   html #copyright .left, html #copyright .right, body #copyright .left, body #copyright .right {
     float: none;
   }
-  /* line 168, ../sass/responsive.scss */
+  /* line 179, ../sass/responsive.scss */
   html #copyright .left, body #copyright .left {
     font: 120%/43px Tahoma, Arial;
     text-align: center;
     background: #3cb5f1 url("../images/copy2.png") repeat-x 0% 0%;
     padding: 0 4.6875%;
   }
-  /* line 174, ../sass/responsive.scss */
+  /* line 185, ../sass/responsive.scss */
   html #copyright .left a, body #copyright .left a {
     margin: 0;
   }
-  /* line 176, ../sass/responsive.scss */
+  /* line 187, ../sass/responsive.scss */
   html #copyright .right, body #copyright .right {
     font: 100% Tahoma, Arial;
     line-height: normal;
@@ -783,7 +801,7 @@
     height: auto;
     padding: 10px 60px 10px 4.6875%;
   }
-  /* line 183, ../sass/responsive.scss */
+  /* line 194, ../sass/responsive.scss */
   html #copyright .get_facts, body #copyright .get_facts {
     background: url("../images/facts2.png") no-repeat 0% 0%;
     width: 100%;
@@ -793,7 +811,7 @@
     left: 0px!important;
     top: -127px;
   }
-  /* line 192, ../sass/responsive.scss */
+  /* line 203, ../sass/responsive.scss */
   html #copyright .bird, body #copyright .bird {
     display: block!important;
     right: 0!important;
@@ -803,11 +821,11 @@
     height: 67px;
     top: -65px;
   }
-  /* line 203, ../sass/responsive.scss */
+  /* line 214, ../sass/responsive.scss */
   html body.front #node-46 .home, body body.front #node-46 .home {
     width: auto!important;
   }
-  /* line 204, ../sass/responsive.scss */
+  /* line 215, ../sass/responsive.scss */
   html #block-rotating-banner-1, body #block-rotating-banner-1 {
     display: block!important;
     border-top: 3px solid #b8d647;
@@ -816,22 +834,22 @@
     position: relative;
     z-index: 100;
   }
-  /* line 212, ../sass/responsive.scss */
+  /* line 223, ../sass/responsive.scss */
   html #block-rotating-banner-1 .rotating-banner, body #block-rotating-banner-1 .rotating-banner {
     overflow: auto;
   }
-  /* line 215, ../sass/responsive.scss */
+  /* line 226, ../sass/responsive.scss */
   html #block-block-16,
   html #block-block-31, body #block-block-16,
   body #block-block-31 {
     margin: 0;
   }
-  /* line 216, ../sass/responsive.scss */
+  /* line 227, ../sass/responsive.scss */
   html #node-16 .left, body #node-16 .left {
     width: auto!important;
     margin-right: 0px!important;
   }
-  /* line 222, ../sass/responsive.scss */
+  /* line 233, ../sass/responsive.scss */
   html .tips,
   html .learn,
   html .vpd, body .tips,
@@ -839,7 +857,7 @@
   body .vpd {
     width: auto!important;
   }
-  /* line 223, ../sass/responsive.scss */
+  /* line 234, ../sass/responsive.scss */
   html #content .pane #block-system-main .node, body #content .pane #block-system-main .node {
     padding: 0 30px !important;
   }
