--- a/sass/front.scss
+++ b/sass/front.scss
@@ -1,8 +1,10 @@
 body.front { 
     background: url('../images/nav_home.png') no-repeat 120px 125px;     
     
+    /*
     #page { background: url('../images/home.png') no-repeat 100% 100%;	} 
-	
+	*/
+    
 	#navigation {
         background:none;		
 		height:442px; 
