--- a/sass/jquery.fancybox-1.3.4.scss
+++ b/sass/jquery.fancybox-1.3.4.scss
@@ -14,7 +14,8 @@
  *   http://www.opensource.org/licenses/mit-license.php
  *   http://www.gnu.org/licenses/gpl.html
  */
-
+ h3 { margin-bottom:5px;}
+ul { margin:0 0 10px 0; } 
 #fancybox-loading {
 	position: fixed;
 	top: 50%;
@@ -81,19 +82,26 @@
 	position: relative;
 	overflow: hidden;
 	z-index: 1102;
-	border: 8px solid #ec008c;
-    -webkit-border-radius: 20px;
-    -moz-border-radius: 20px;
-	border-radius: 20px;
-    background:#fff;
+	
     
     ul { color:#252525;}
     h3 { 
         span { font:bold 30px Tahoma, Arial;}
     }
     
-    #d1, #d2, #d3, #d4, #d5, #d6{padding:25px;}
-    
+    #d1, #d2, #d3, #d4, #d5, #d6{
+        padding:25px;        
+        -webkit-border-radius: 20px;
+        -moz-border-radius: 20px;
+        border-radius: 20px;
+        background:#fff;        
+    }    
+    #d1{border: 8px solid #ee008a;}
+    #d2{border: 8px solid #00afec;}
+    #d3{border: 8px solid #9bbb47;}
+    #d4{border: 8px solid #9a3e91;}
+    #d5{border: 8px solid #ee603d;} 
+    #d6{border: 8px solid #009999;}
 }
 
 #fancybox-hide-sel-frame {
@@ -109,7 +117,7 @@
 #fancybox-close {
 	position: absolute;
 	top: 13px;
-	right: 13px;
+	right: 33px;
 	width: 26px;
 	height: 26px; 
 	background: transparent url('../images/close.png') 0 0;
