--- a/sass/tags.scss
+++ b/sass/tags.scss
@@ -16,6 +16,6 @@ h3 span { font:normal 26px 'sketch', Arial, sans-serif}
 transform: scale(1) rotate(-4deg) translateX(0px) translateY(0px) skewX(0deg) skewY(0deg); 
 	margin-bottom:70px;
 	}
-h3 { margin-bottom:5px;}
+h3 { margin-bottom:10px!important;}  
 	
 body.page-node-11	h3 span { font:normal 39px sketch}
