--- a/stylesheets/jquery.fancybox-1.3.4.css
+++ b/stylesheets/jquery.fancybox-1.3.4.css
@@ -14,7 +14,17 @@
  *   http://www.opensource.org/licenses/mit-license.php
  *   http://www.gnu.org/licenses/gpl.html
  */
+/* line 17, ../sass/jquery.fancybox-1.3.4.scss */
+h3 {
+  margin-bottom: 5px;
+}
+
 /* line 18, ../sass/jquery.fancybox-1.3.4.scss */
+ul {
+  margin: 0 0 10px 0;
+}
+
+/* line 19, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-loading {
   position: fixed;
   top: 50%;
@@ -29,7 +39,7 @@
   display: none;
 }
 
-/* line 32, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 33, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-loading div {
   position: absolute;
   top: 0;
@@ -39,7 +49,7 @@
   background-image: url("../images/fancybox.png");
 }
 
-/* line 41, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 42, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-overlay {
   position: absolute;
   top: 0;
@@ -50,7 +60,7 @@
   background: none !important;
 }
 
-/* line 51, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 52, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-tmp {
   padding: 0;
   margin: 0;
@@ -59,7 +69,7 @@
   display: none;
 }
 
-/* line 59, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 60, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-wrap {
   position: absolute;
   top: 0;
@@ -70,7 +80,7 @@
   display: none;
 }
 
-/* line 69, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 70, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-outer {
   position: relative;
   width: 100%;
@@ -78,7 +88,7 @@
   /*background: #fff;*/
 }
 
-/* line 76, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 77, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-content {
   width: 0;
   height: 0;
@@ -87,26 +97,49 @@
   position: relative;
   overflow: hidden;
   z-index: 1102;
-  border: 8px solid #ec008c;
+}
+/* line 87, ../sass/jquery.fancybox-1.3.4.scss */
+#fancybox-content ul {
+  color: #252525;
+}
+/* line 89, ../sass/jquery.fancybox-1.3.4.scss */
+#fancybox-content h3 span {
+  font: bold 30px Tahoma, Arial;
+}
+/* line 92, ../sass/jquery.fancybox-1.3.4.scss */
+#fancybox-content #d1, #fancybox-content #d2, #fancybox-content #d3, #fancybox-content #d4, #fancybox-content #d5, #fancybox-content #d6 {
+  padding: 25px;
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
   border-radius: 20px;
   background: #fff;
 }
-/* line 90, ../sass/jquery.fancybox-1.3.4.scss */
-#fancybox-content ul {
-  color: #252525;
+/* line 99, ../sass/jquery.fancybox-1.3.4.scss */
+#fancybox-content #d1 {
+  border: 8px solid #ee008a;
 }
-/* line 92, ../sass/jquery.fancybox-1.3.4.scss */
-#fancybox-content h3 span {
-  font: bold 30px Tahoma, Arial;
+/* line 100, ../sass/jquery.fancybox-1.3.4.scss */
+#fancybox-content #d2 {
+  border: 8px solid #00afec;
 }
-/* line 95, ../sass/jquery.fancybox-1.3.4.scss */
-#fancybox-content #d1, #fancybox-content #d2, #fancybox-content #d3, #fancybox-content #d4, #fancybox-content #d5, #fancybox-content #d6 {
-  padding: 25px;
+/* line 101, ../sass/jquery.fancybox-1.3.4.scss */
+#fancybox-content #d3 {
+  border: 8px solid #9bbb47;
+}
+/* line 102, ../sass/jquery.fancybox-1.3.4.scss */
+#fancybox-content #d4 {
+  border: 8px solid #9a3e91;
+}
+/* line 103, ../sass/jquery.fancybox-1.3.4.scss */
+#fancybox-content #d5 {
+  border: 8px solid #ee603d;
+}
+/* line 104, ../sass/jquery.fancybox-1.3.4.scss */
+#fancybox-content #d6 {
+  border: 8px solid #009999;
 }
 
-/* line 99, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 107, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-hide-sel-frame {
   position: absolute;
   top: 0;
@@ -117,11 +150,11 @@
   z-index: 1101;
 }
 
-/* line 109, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 117, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-close {
   position: absolute;
   top: 13px;
-  right: 13px;
+  right: 33px;
   width: 26px;
   height: 26px;
   background: transparent url("../images/close.png") 0 0;
@@ -130,7 +163,7 @@
   display: none;
 }
 
-/* line 121, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 129, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-error {
   color: #444;
   font: normal 12px/20px Arial;
@@ -138,7 +171,7 @@
   margin: 0;
 }
 
-/* line 128, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 136, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-img {
   width: 100%;
   height: 100%;
@@ -150,7 +183,7 @@
   vertical-align: top;
 }
 
-/* line 139, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 147, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-frame {
   width: 100%;
   height: 100%;
@@ -158,7 +191,7 @@
   display: block;
 }
 
-/* line 146, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 154, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-left, #fancybox-right {
   position: absolute;
   bottom: 0px;
@@ -171,17 +204,17 @@
   display: none;
 }
 
-/* line 158, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 166, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-left {
   left: 0px;
 }
 
-/* line 162, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 170, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-right {
   right: 0px;
 }
 
-/* line 166, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 174, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-left-ico, #fancybox-right-ico {
   position: absolute;
   top: 50%;
@@ -194,36 +227,36 @@
   display: block;
 }
 
-/* line 178, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 186, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-left-ico {
   background-image: url("../images/fancybox.png");
   background-position: -40px -30px;
 }
 
-/* line 183, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 191, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-right-ico {
   background-image: url("../images/fancybox.png");
   background-position: -40px -60px;
 }
 
-/* line 188, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 196, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-left:hover, #fancybox-right:hover {
   visibility: visible;
   /* IE6 */
 }
 
-/* line 192, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 200, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-left:hover span {
   left: 20px;
 }
 
-/* line 196, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 204, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-right:hover span {
   left: auto;
   right: 20px;
 }
 
-/* line 201, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 209, ../sass/jquery.fancybox-1.3.4.scss */
 .fancybox-bg {
   position: absolute;
   padding: 0;
@@ -235,7 +268,7 @@
   /*background-color:#fff;*/
 }
 
-/* line 212, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 220, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-bg-n {
   top: -22px;
   left: 0;
@@ -244,7 +277,7 @@
   /*border-top:8px solid #ec008c;    */
 }
 
-/* line 220, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 228, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-bg-ne {
   top: -22px;
   right: -22px;
@@ -252,7 +285,7 @@
   /*background-position: -40px -162px;    */
 }
 
-/* line 227, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 235, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-bg-e {
   top: 0;
   right: -22px;
@@ -262,7 +295,7 @@
   /*border-right:8px solid #ec008c;    */
 }
 
-/* line 236, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 244, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-bg-se {
   bottom: -22px;
   right: -22px;
@@ -270,7 +303,7 @@
   /*background-position: -40px -182px;     */
 }
 
-/* line 243, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 251, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-bg-s {
   bottom: -22px;
   left: 0;
@@ -280,7 +313,7 @@
   /*border-bottom:8px solid #ec008c;    */
 }
 
-/* line 252, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 260, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-bg-sw {
   bottom: -22px;
   left: -22px;
@@ -288,7 +321,7 @@
   /*background-position: -40px -142px;*/
 }
 
-/* line 259, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 267, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-bg-w {
   top: 0;
   left: -22px;
@@ -297,7 +330,7 @@
   /*border-left:8px solid #ec008c;    */
 }
 
-/* line 267, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 275, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-bg-nw {
   top: -22px;
   left: -22px;
@@ -305,14 +338,14 @@
   /*background-position: -40px -122px;*/
 }
 
-/* line 274, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 282, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-title {
   font-family: Helvetica;
   font-size: 12px;
   z-index: 1102;
 }
 
-/* line 280, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 288, ../sass/jquery.fancybox-1.3.4.scss */
 .fancybox-title-inside {
   padding-bottom: 10px;
   text-align: center;
@@ -321,13 +354,13 @@
   position: relative;
 }
 
-/* line 288, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 296, ../sass/jquery.fancybox-1.3.4.scss */
 .fancybox-title-outside {
   padding-top: 10px;
   color: #fff;
 }
 
-/* line 293, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 301, ../sass/jquery.fancybox-1.3.4.scss */
 .fancybox-title-over {
   position: absolute;
   bottom: 0;
@@ -336,14 +369,14 @@
   text-align: left;
 }
 
-/* line 301, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 309, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-title-over {
   padding: 10px;
   background-image: url("../images/fancy_title_over.png");
   display: block;
 }
 
-/* line 307, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 315, ../sass/jquery.fancybox-1.3.4.scss */
 .fancybox-title-float {
   position: absolute;
   left: 0;
@@ -351,26 +384,26 @@
   height: 32px;
 }
 
-/* line 314, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 322, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-title-float-wrap {
   border: none;
   border-collapse: collapse;
   width: auto;
 }
 
-/* line 320, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 328, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-title-float-wrap td {
   border: none;
   white-space: nowrap;
 }
 
-/* line 325, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 333, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-title-float-left {
   padding: 0 0 0 15px;
   background: url("../images/fancybox.png") -40px -90px no-repeat;
 }
 
-/* line 330, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 338, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-title-float-main {
   color: #FFF;
   line-height: 29px;
@@ -379,116 +412,116 @@
   background: url("../images/fancybox-x.png") 0px -40px;
 }
 
-/* line 338, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 346, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-title-float-right {
   padding: 0 0 0 15px;
   background: url("../images/fancybox.png") -55px -90px no-repeat;
 }
 
 /* IE6 */
-/* line 345, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 353, ../sass/jquery.fancybox-1.3.4.scss */
 .fancybox-ie6 #fancybox-close {
   background: transparent;
   filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='fancybox/fancy_close.png', sizingMethod='scale');
 }
 
-/* line 347, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 355, ../sass/jquery.fancybox-1.3.4.scss */
 .fancybox-ie6 #fancybox-left-ico {
   background: transparent;
   filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='fancybox/fancy_nav_left.png', sizingMethod='scale');
 }
 
-/* line 348, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 356, ../sass/jquery.fancybox-1.3.4.scss */
 .fancybox-ie6 #fancybox-right-ico {
   background: transparent;
   filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='fancybox/fancy_nav_right.png', sizingMethod='scale');
 }
 
-/* line 350, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 358, ../sass/jquery.fancybox-1.3.4.scss */
 .fancybox-ie6 #fancybox-title-over {
   background: transparent;
   filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='fancybox/fancy_title_over.png', sizingMethod='scale');
   zoom: 1;
 }
 
-/* line 351, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 359, ../sass/jquery.fancybox-1.3.4.scss */
 .fancybox-ie6 #fancybox-title-float-left {
   background: transparent;
   filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='fancybox/fancy_title_left.png', sizingMethod='scale');
 }
 
-/* line 352, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 360, ../sass/jquery.fancybox-1.3.4.scss */
 .fancybox-ie6 #fancybox-title-float-main {
   background: transparent;
   filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='fancybox/fancy_title_main.png', sizingMethod='scale');
 }
 
-/* line 353, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 361, ../sass/jquery.fancybox-1.3.4.scss */
 .fancybox-ie6 #fancybox-title-float-right {
   background: transparent;
   filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='fancybox/fancy_title_right.png', sizingMethod='scale');
 }
 
-/* line 355, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 363, ../sass/jquery.fancybox-1.3.4.scss */
 .fancybox-ie6 #fancybox-bg-w, .fancybox-ie6 #fancybox-bg-e, .fancybox-ie6 #fancybox-left, .fancybox-ie6 #fancybox-right, #fancybox-hide-sel-frame {
   height: expression(this.parentNode.clientHeight + "px");
 }
 
-/* line 359, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 367, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-loading.fancybox-ie6 {
   position: absolute;
   margin-top: 0;
   top: expression((-20 + (document.documentElement.clientHeight ? document.documentElement.clientHeight/2 : document.body.clientHeight/2 ) + ( ignoreMe = document.documentElement.scrollTop ? document.documentElement.scrollTop : document.body.scrollTop )) + 'px');
 }
 
-/* line 364, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 372, ../sass/jquery.fancybox-1.3.4.scss */
 #fancybox-loading.fancybox-ie6 div {
   background: transparent;
   filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='fancybox/fancy_loading.png', sizingMethod='scale');
 }
 
 /* IE6, IE7, IE8 */
-/* line 368, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 376, ../sass/jquery.fancybox-1.3.4.scss */
 .fancybox-ie .fancybox-bg {
   background: transparent !important;
 }
 
-/* line 370, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 378, ../sass/jquery.fancybox-1.3.4.scss */
 .fancybox-ie #fancybox-bg-n {
   filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='fancybox/fancy_shadow_n.png', sizingMethod='scale');
 }
 
-/* line 371, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 379, ../sass/jquery.fancybox-1.3.4.scss */
 .fancybox-ie #fancybox-bg-ne {
   filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='fancybox/fancy_shadow_ne.png', sizingMethod='scale');
 }
 
-/* line 372, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 380, ../sass/jquery.fancybox-1.3.4.scss */
 .fancybox-ie #fancybox-bg-e {
   filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='fancybox/fancy_shadow_e.png', sizingMethod='scale');
 }
 
-/* line 373, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 381, ../sass/jquery.fancybox-1.3.4.scss */
 .fancybox-ie #fancybox-bg-se {
   filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='fancybox/fancy_shadow_se.png', sizingMethod='scale');
 }
 
-/* line 374, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 382, ../sass/jquery.fancybox-1.3.4.scss */
 .fancybox-ie #fancybox-bg-s {
   filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='fancybox/fancy_shadow_s.png', sizingMethod='scale');
 }
 
-/* line 375, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 383, ../sass/jquery.fancybox-1.3.4.scss */
 .fancybox-ie #fancybox-bg-sw {
   filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='fancybox/fancy_shadow_sw.png', sizingMethod='scale');
 }
 
-/* line 376, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 384, ../sass/jquery.fancybox-1.3.4.scss */
 .fancybox-ie #fancybox-bg-w {
   filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='fancybox/fancy_shadow_w.png', sizingMethod='scale');
 }
 
-/* line 377, ../sass/jquery.fancybox-1.3.4.scss */
+/* line 385, ../sass/jquery.fancybox-1.3.4.scss */
 .fancybox-ie #fancybox-bg-nw {
   filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='fancybox/fancy_shadow_nw.png', sizingMethod='scale');
 }
