--- a/stylesheets/tags.css
+++ b/stylesheets/tags.css
@@ -51,7 +51,7 @@ h3 span {
 
 /* line 19, ../sass/tags.scss */
 h3 {
-  margin-bottom: 5px;
+  margin-bottom: 10px!important;
 }
 
 /* line 21, ../sass/tags.scss */
